El dynamicInclude ahora recibe el contenido de la plantilla