@@ -9,13 +9,13 @@ import javax.el.VariableMapper;
 import javax.faces.FacesException;
 import javax.faces.component.UIComponent;
 
+import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang.StringUtils;
 
 import com.sun.facelets.Facelet;
 import com.sun.facelets.FaceletContext;
 import com.sun.facelets.FaceletException;
 import com.sun.facelets.el.VariableMapperWrapper;
-import com.sun.facelets.impl.DefaultResourceResolver;
 import com.sun.facelets.impl.DynamicFacelet;
 import com.sun.facelets.tag.TagAttribute;
 import com.sun.facelets.tag.TagConfig;
@@ -23,38 +23,36 @@ import com.sun.facelets.tag.TagHandler;
 
 public final class DynamicIncludeHandler extends TagHandler {
 
-	private final TagAttribute src;
+	private final TagAttribute value;
 
 	/**
 	 * @param config
 	 */
 	public DynamicIncludeHandler(TagConfig config) {
 		super(config);
-		this.src = this.getRequiredAttribute("src");
+		this.value = this.getRequiredAttribute("value");
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see
-	 * com.sun.facelets.FaceletHandler#apply(com.sun.facelets.FaceletContext,
-	 * javax.faces.component.UIComponent)
-	 */
+	@Override
 	public void apply(FaceletContext ctx, UIComponent parent)
 			throws IOException, FacesException, FaceletException, ELException {
-		String path = this.src.getValue(ctx);
-		if (StringUtils.isBlank(path)) {
+		String template = this.value.getValue(ctx);
+		if (StringUtils.isBlank(template)) {
 			return;
 		}
-		URL url = new URL( path );
+		File file = File.createTempFile( "dynamicInclude", ".xhtml" );
+		URL url = file.toURI().toURL();
 		VariableMapper orig = ctx.getVariableMapper();
 		ctx.setVariableMapper(new VariableMapperWrapper(orig));
 		try {
 			this.nextHandler.apply(ctx, null);
+			FileUtils.writeStringToFile(file, template, "UTF-8");
 			Facelet facelet = DynamicFacelet.createFacelet(ctx, url);
 			facelet.apply(ctx.getFacesContext(), parent);
 		} finally {
 			ctx.setVariableMapper(orig);
+			FileUtils.deleteQuietly(file);
 		}
 	}
+
 }
